# rust-mumble-protocol

./: Cargo.toml  build.rs
examples/: echo_client.rs
protos/: MumbleUDP.proto
src/: control.rs  crypt.rs  lib.rs  voice.rs
