[package]
name = "mumble-protocol"
version = "0.4.1"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johni0702/rust-mumble-protocol"

[features]
default = []
webrtc-extensions = []

[build-dependencies]
protobuf-codegen-pure = "2.28"

[dependencies]
bytes = "1.10.0"
byteorder = "1.5.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
protobuf = "2.28"
block-modes = "0.9.1"
aes = "0.8.4"
ring = "0.17.8"

[dev-dependencies]
argparse = "0.2"
futures = "0.3.31"
native-tls = "0.2"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-native-tls = "0.3.1"
